# baggins

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs
src/discount/: mod.rs
src/tax/: mod.rs
tests/: calculus_test.rs  discount_test.rs  tax_test.rs  test_baggins.rs  test_discount.rs  test_taxes.rs
