[package]
name = "calculus"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bigdecimal = {version = "0.4.2", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
smartcore = {version = "0.2.1", features=["serde"]}


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

