[package]
name = "baggins"
version = "0.1.4"
edition = "2021"
authors = ["Andrés Reyes El Programador Pobre"]
description = "Utilities to perform calculation operations on subtotals and sales totals"
license = "MIT"
keywords = ["sales"]
categories = ["finance"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web-lab = "0.20.1"
bigdecimal = {version = "0.4.2", features = ["serde"]}
env_logger = "0.10.1"
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
smartcore = {version = "0.2.1", features=["serde"]}


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

